--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -7,13 +7,19 @@
 
 <form method="post">
     <div class="form-group">
-        <label>
+        <label>Name
     <input type="text" name="eventName" class = "form-control">
+        </label>
+    </div>
+    <div class="form-group">
+        <label>Description
+            <input type="text" name="eventDescription" class = "form-control">
         </label>
     </div>
     <div class="form-group">
     <input type="submit" value="Create" class="btn btn-success">
     </div>
+
 </form>
 
 </body>
