--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -8,11 +8,17 @@
 <table class="table table-striped">
     <thread>
         <tr>
+            <th>ID</th>
             <th>Name</th>
+            <th>Description</th>
+
         </tr>
     </thread>
     <tr th:each="event : ${events}">
-        <td th:text="${event}"></td>
+        <td th:text="${event.id}">
+        <td th:text="${event.name}"></td>
+        <td th:text="${event.description}">
+
     </tr>
 </table>
 
