--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -5,6 +5,7 @@
 
 <header th:replace="fragments :: header"></header>
 
+<p th:text="${errorMsg}" style="color: red;">
 <form method="post">
     <div class="form-group">
         <label>Name
@@ -16,6 +17,13 @@
             <input type="text" name="description" class="form-control">
         </label>
     </div>
+
+    <div class="form-group">
+        <label>Contact Email
+            <input type="text" name="contactEmail" class="form-control">
+        </label>
+    </div>
+
     <div class="form-group">
         <input type="submit" value="Create" class="btn btn-success">
     </div>
